--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,21 @@
-@font-face {
-    font-family: 'e-Ukraine';
-    src: url('fonts/e-Ukraine-Regular.woff2') format('woff2'),
-    url('fonts/e-Ukraine-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
+/*@font-face {*/
+/*    font-family: 'e-Ukraine';*/
+/*    src: url('fonts/e-Ukraine-Regular.woff2') format('woff2'),*/
+/*    url('fonts/e-Ukraine-Regular.woff') format('woff');*/
+/*    font-weight: 400;*/
+/*    font-style: normal;*/
+/*}*/
 
-@font-face {
-    font-family: 'e-Ukraine';
-    src: url('fonts/e-Ukraine-Bold.woff2') format('woff2'),
-    url('fonts/e-Ukraine-Bold.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-}
+/*@font-face {*/
+/*    font-family: 'e-Ukraine';*/
+/*    src: url('fonts/e-Ukraine-Bold.woff2') format('woff2'),*/
+/*    url('fonts/e-Ukraine-Bold.woff') format('woff');*/
+/*    font-weight: 700;*/
+/*    font-style: normal;*/
+/*}*/
 
 body {
-    font-family: 'e-Ukraine', sans-serif;
+    font-family: 'Arial', sans-serif;
     background-color: #121212;
     display: flex;
     flex-direction: column;
@@ -48,7 +48,7 @@ p{
 }
 
 #zxc{
-    margin-left: -230px;
+    margin-left: -500px;
 }
 
 h1 {
@@ -74,7 +74,7 @@ input::placeholder {
 }
 
 button {
-    background-color: #262626;
+    background-color: #2C2C2C;
     color: white;
     border: none;
     padding: 12px;
@@ -86,8 +86,9 @@ button {
     font-weight: normal;
 }
 
+
 button:hover {
-    background-color: #2e2e2e;
+    background-color: #363636;
     transition: background 0.3s;
 }
 
